# lipgloss-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: API.md  TREE_IN_LIST_SPACING_ISSUE.md
examples/bg-test/: Cargo.toml
examples/bg-test/src/: main.rs
examples/blending/brightness/: Cargo.toml
examples/blending/brightness/src/: main.rs
examples/blending/comprehensive-demo/: Cargo.toml
examples/blending/comprehensive-demo/src/: main.rs
examples/blending/linear-1d/standalone/: Cargo.toml
examples/blending/linear-1d/standalone/src/: main.rs
examples/blending/linear-2d/standalone/: Cargo.toml
examples/blending/linear-2d/standalone/src/: main.rs
examples/layout-demo/: Cargo.toml
examples/layout-demo/src/: main.rs
examples/list-demo/duckduckgoose/: Cargo.toml
examples/list-demo/duckduckgoose/src/: main.rs
examples/list-demo/glow/: Cargo.toml
examples/list-demo/glow/src/: main.rs
examples/list-demo/grocery/: Cargo.toml
examples/list-demo/grocery/src/: main.rs
examples/list-demo/roman/: Cargo.toml
examples/list-demo/roman/src/: main.rs
examples/list-demo/simple/: Cargo.toml
examples/list-demo/simple/src/: main.rs
examples/list-demo/sublist/: Cargo.toml
examples/list-demo/sublist/src/: main.rs
examples/ssh-demo/: Cargo.toml
examples/ssh-demo/src/: main.rs
examples/table-demo/: Cargo.toml
examples/table-demo/ansi/: Cargo.toml
examples/table-demo/ansi/src/: main.rs
examples/table-demo/chess/: Cargo.toml
examples/table-demo/chess/src/: main.rs
examples/table-demo/go-output/: ansi.txt  chess.txt  languages.txt  mindy.txt  pokemon.txt
examples/table-demo/languages/: Cargo.toml
examples/table-demo/languages/src/: main.rs
examples/table-demo/mindy/: Cargo.toml
examples/table-demo/mindy/src/: main.rs
examples/table-demo/pokemon/: Cargo.toml
examples/table-demo/pokemon/src/: main.rs
examples/table-demo/src/: main.rs
examples/theme-showcase/: Cargo.toml
examples/theme-showcase/src/: main.rs
examples/tree-demo/: Cargo.toml
examples/tree-demo/background/: Cargo.toml
examples/tree-demo/background/src/: main.rs
examples/tree-demo/files/: Cargo.toml
examples/tree-demo/files/src/: main.rs
examples/tree-demo/makeup/: Cargo.toml
examples/tree-demo/makeup/src/: main.rs
examples/tree-demo/rounded/: Cargo.toml
examples/tree-demo/rounded/src/: main.rs
examples/tree-demo/simple/: Cargo.toml
examples/tree-demo/simple/src/: main.rs
examples/tree-demo/src/: main.rs
examples/tree-demo/styles/: Cargo.toml
examples/tree-demo/styles/src/: main.rs
examples/tree-demo/toggle/: Cargo.toml
examples/tree-demo/toggle/src/: main.rs
lipgloss/: Cargo.toml
lipgloss-extras/: Cargo.toml  README.md
lipgloss-extras/src/: lib.rs
lipgloss-list/: Cargo.toml  README.md
lipgloss-list/src/: enumerator.rs  lib.rs
lipgloss-list/tests/: basic_tests.rs  edge_cases.rs  golden_tests.rs  sublist_targeted.rs
lipgloss-list/tests/testdata/: TestComplexSublist.golden
lipgloss-table/: Cargo.toml  README.md
lipgloss-table/src/: lib.rs  resizing.rs  rows.rs  util.rs
lipgloss-tree/: Cargo.toml  README.md
lipgloss-tree/src/: children.rs  enumerator.rs  lib.rs  renderer.rs
lipgloss-tree/tests/: basic_tests.rs  golden_tests.rs
lipgloss-tree/tests/testdata/: TestMultilinePrefix.golden  TestMultilinePrefixInception.golden  TestMultilinePrefixSubtree.golden  TestRootStyle.golden  TestTreeCustom.golden
lipgloss-tree/tests/testdata/TestTree/: after.golden
lipgloss/benches/: performance_bench.rs
lipgloss/examples/: gradient_demo.rs
lipgloss/src/: align.rs  blending.rs  border.rs  color.rs  gradient.rs  join.rs  lib.rs  position.rs  renderer.rs  security.rs  size.rs  utils.rs  whitespace.rs
lipgloss/src/style/: attributes.rs  borders.rs  colors.rs  core.rs  equality.rs  getters.rs  layout.rs  mod.rs  properties.rs  render.rs  render_utils.rs  rules.rs  sizing.rs  transform.rs  unset.rs
lipgloss/tests/: align_helpers.rs  blending_parity_tests.rs  border_snapshots.rs  border_style.rs  color_profile_numeric.rs  debug_color_conversion.rs  join_parity.rs  position_tests.rs  ranges_parity.rs  renderer_concurrency.rs  renderer_detection.rs  security_tests.rs  style_core.rs  style_parity_go.rs  style_rendering_extended.rs  styled_layout_snapshots.rs
