[workspace]
# Defines all the crates that are part of this workspace.
# The examples are also included to make them easily runnable.
members = [
    "lipgloss",
    "lipgloss-list",
    "lipgloss-table",
    "lipgloss-tree",
    "lipgloss-extras",
    "examples/layout-demo",
    "examples/list-demo/simple",
    "examples/list-demo/grocery",
    "examples/list-demo/roman",
    "examples/list-demo/duckduckgoose",
    "examples/list-demo/glow",
    "examples/list-demo/sublist",
    "examples/table-demo/ansi",
    "examples/table-demo/chess",
    "examples/table-demo/mindy",
    "examples/table-demo/pokemon",
    "examples/table-demo/languages",
    "examples/tree-demo/simple",
    "examples/tree-demo/background",
    "examples/tree-demo/styles",
    "examples/tree-demo/makeup",
    "examples/tree-demo/toggle",
    "examples/tree-demo/rounded",
    "examples/tree-demo/files",
    "examples/blending/comprehensive-demo",
    "examples/blending/linear-1d/standalone",
    "examples/blending/linear-2d/standalone", 
    "examples/blending/brightness",
    "examples/ssh-demo",
    "examples/theme-showcase",
]
resolver = "2"

# Shared metadata for all crates in the workspace.
# Individual crates will inherit these settings.
[workspace.package]
version = "0.0.9"
authors = ["whit3rabbit <whiterabbit@protonmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/whit3rabbit/lipgloss-rs"
homepage = "https://github.com/whit3rabbit/lipgloss-rs"
keywords = ["tui", "cli", "terminal", "style", "layout"]
categories = ["command-line-interface", "text-processing"]

# Shared dependencies for all crates in the workspace.
# This ensures version consistency across the entire project.
[workspace.dependencies]
# --- Core Dependencies ---
# The primary dependency for all terminal manipulation: colors, styling,
# cursor movement, and reading terminal size. It's the Rust equivalent
# of Go's termenv and parts of golang.org/x/term.
crossterm = "0.29"

# Essential for correctly calculating the display width of strings,
# accounting for CJK characters and emojis. This is the direct Rust
# equivalent of Go's 'github.com/rivo/uniseg'.
unicode-width = "0.2.1"

# The core lipgloss crate, which all other components will depend on.
lipgloss = { path = "./lipgloss", version = "0.0.9" }
lipgloss-list = { path = "./lipgloss-list", version = "0.0.9" }
lipgloss-table = { path = "./lipgloss-table", version = "0.0.9" }
lipgloss-tree = { path = "./lipgloss-tree", version = "0.0.9" }


# --- Dev Dependencies (for examples and tests) ---
bubbletea-rs = { version = "0.0.6" }

# The async runtime needed to run bubbletea-rs examples.
tokio = { version = "1", features = ["full"] }

# For advanced color manipulation, similar to 'go-colorful'.
palette = "0.7.6"

# For stripping ANSI escape codes, which can be useful in width calculations
# or for creating plain-text versions of output.
strip-ansi-escapes = "0.2.1"