[package]
name = "blending-demo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Demo of color blending and utility functions in lipgloss-rs"

[dependencies]
lipgloss.workspace = true