[package]
name = "glow-list-demo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "glow-list-demo"
path = "src/main.rs"

[dependencies]
lipgloss.workspace = true
lipgloss-list.workspace = true
lipgloss-tree.workspace = true