[package]
name = "sublist-demo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "sublist-demo"
path = "src/main.rs"

[dependencies]
lipgloss.workspace = true
lipgloss-list.workspace = true
lipgloss-table.workspace = true
lipgloss-tree.workspace = true
palette.workspace = true